--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run misson
       run: |
-        python autobot.py ${{webhook}} ${{secret}}
+        python autobot.py ${{ secrets.webhook }} ${{ secrets.secret }}
