--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: DingTalk_misson
 
 on:
   schedule:
-    - cron: "0 0/2 * * *"
+    - cron: "0 8 * * 1-5"
+    - cron: "0 12 * * 1-5"
+    - cron: "0 18 * * 1-5"
   watch:
     types: [started]
 jobs:
