--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: DingTalk_misson
+name: myWeatherBot
 
 on:
   schedule:
-    - cron: "0 0 * * 1-5"
-    - cron: "0 4 * * 1-5"
-    - cron: "0 10 * * 1-5"
+    - cron: "30 23 * * *"
+    - cron: "30 4 * * *"
+    - cron: "30 10 * * *"
   watch:
     types: [started]
 jobs:
@@ -25,4 +25,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run misson
       run: |
-        python autobot.py ${{ secrets.webhook }} ${{ secrets.secret }} ${{ secrets.qweather_key }}
+        python weatherbot.py ${{ secrets.webhook }} ${{ secrets.secret }} ${{ secrets.qweather_key }}
