--- a/.github/workflows/jobreport.yml
+++ b/.github/workflows/jobreport.yml
@@ -25,4 +25,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run misson
       run: |
-        python beiHaiJob.py ${{ secrets.webhook }} ${{ secrets.secret }}
+        python beihaijob.py ${{ secrets.webhook }} ${{ secrets.secret }}
