--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/pivateKey/
-!/pivateKey/dingtalkbot_key.py
-
-!/pivateKey/qweather_key.py
-!/KEY/
 !/KEY/qweather_key.py
+!/KEY/
+!/KEY/dingtalkbot_key.py
