--- a/.github/workflows/jobreport.yml
+++ b/.github/workflows/jobreport.yml
@@ -2,27 +2,27 @@ name: BeiHaiJobReport
 
 on:
   schedule:
-#     - cron: "0 0 * * *"
-    - cron: "0 4 * * *"
-    - cron: "0 10 * * *"
-  watch:
-    types: [started]
+    - cron: "0 0 * * *"
+    - cron: "0 12 * * *"
+  workflow_dispatch:
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests lxml
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Run misson
       run: |
         python beihaijob.py ${{ secrets.webhook }} ${{ secrets.secret }}
