--- a/.github/workflows/jobreport.yml
+++ b/.github/workflows/jobreport.yml
@@ -26,3 +26,4 @@ jobs:
     - name: Run misson
       run: |
         python beihaijob.py ${{ secrets.webhook }} ${{ secrets.secret }}
+        python gxjob.py ${{ secrets.webhook }} ${{ secrets.secret }}
